syntax = "proto3";
package dymaptic.GeoBlazor.ProtoGen;
import "google/protobuf/empty.proto";

message Action {
   string Type = 1;
   string Title = 2;
   string ClassName = 3;
   bool Active = 4;
   bool Disabled = 5;
   bool Visible = 6;
   string Id = 7;
   string Image = 8;
   bool Value = 9;
   string ActionId = 10;
}
message ActionCollection {
   repeated MapComponent Items = 1;
}
message Attribute {
   string Key = 1;
   string Value = 2;
   string ValueType = 3;
}
message AttributeCollection {
   repeated MapComponent Items = 1;
}
message ChartMediaInfoValue {
   repeated string Fields = 1;
   string NormalizeField = 2;
   string TooltipField = 3;
   repeated MapComponent Series = 4;
   string LinkURL = 5;
   string SourceURL = 6;
   string Id = 7;
}
message ChartMediaInfoValueCollection {
   repeated MapComponent Items = 1;
}
message ChartMediaInfoValueSeries {
   string FieldName = 1;
   string Tooltip = 2;
   double Value = 3;
   string Id = 4;
}
message ChartMediaInfoValueSeriesCollection {
   repeated MapComponent Items = 1;
}
message ElementExpressionInfo {
   string Expression = 1;
   string Title = 2;
}
message ElementExpressionInfoCollection {
   repeated MapComponent Items = 1;
}
message ExpressionInfo {
   string Expression = 1;
   string Name = 2;
   string Title = 3;
   string ReturnType = 4;
   string Id = 5;
}
message FieldInfo {
   string FieldName = 1;
   string Label = 2;
   string Tooltip = 3;
   string StringFieldOption = 4;
   MapComponent Format = 5;
   bool IsEditable = 6;
   bool Visible = 7;
   string Id = 8;
}
message FieldInfoCollection {
   repeated MapComponent Items = 1;
}
message FieldInfoFormat {
   int32 Places = 1;
   bool DigitSeparator = 2;
   string DateFormat = 3;
   string Id = 4;
}
message FieldInfoFormatCollection {
   repeated MapComponent Items = 1;
}
message Geometry {
   string Type = 1;
   MapComponent Extent = 2;
   MapComponent SpatialReference = 3;
   double Longitude = 4;
   double Latitude = 5;
   double X = 6;
   double Y = 7;
   double Z = 8;
   repeated MapComponent Paths = 9;
   repeated MapComponent Rings = 10;
   double Xmax = 11;
   double Xmin = 12;
   double Ymax = 13;
   double Ymin = 14;
   double Zmax = 15;
   double Zmin = 16;
   double Mmax = 17;
   double Mmin = 18;
   bool HasM = 19;
   bool HasZ = 20;
   double M = 21;
   MapComponent Centroid = 22;
   bool IsSelfIntersecting = 23;
   MapComponent Center = 24;
   bool Geodesic = 25;
   int32 NumberOfPoints = 26;
   double Radius = 27;
   string RadiusUnit = 28;
   string Id = 29;
   repeated MapComponent Points = 30;
   bool IsSimple = 31;
   repeated MapComponent Components = 32;
   MapComponent Transform = 33;
   MapComponent VertexAttributes = 34;
   MapComponent VertexSpace = 35;
}
message GeometryCollection {
   repeated MapComponent Items = 1;
}
message Graphic {
   string Id = 1;
   MapComponent Geometry = 2;
   MapComponent Symbol = 3;
   MapComponent PopupTemplate = 4;
   repeated MapComponent Attributes = 5;
   bool Visible = 6;
   string AggregateGeometries = 7;
   MapComponent Origin = 8;
   string LayerId = 9;
   string ViewId = 10;
}
message GraphicCollection {
   repeated MapComponent Items = 1;
}
message GraphicOrigin {
   string LayerId = 1;
   string ArcGISLayerId = 2;
   int32 LayerIndex = 3;
}
message GraphicOriginCollection {
   repeated MapComponent Items = 1;
}
message ImageData {
   bytes Data = 1;
   string ColorSpace = 2;
   int64 Height = 3;
   int64 Width = 4;
}
message MapColor {
   repeated double RgbaValues = 1 [packed = false];
   string HexOrNameValue = 2;
}
message MapComponent {
   oneof subtype {
      Geometry Geometry = 100;
      PopupContent PopupContent = 200;
      ExpressionInfo ExpressionInfo = 300;
      PopupTemplate PopupTemplate = 400;
      Symbol Symbol = 500;
      Action Action = 600;
      ChartMediaInfoValue ChartMediaInfoValue = 700;
      ChartMediaInfoValueSeries ChartMediaInfoValueSeries = 800;
      ElementExpressionInfo ElementExpressionInfo = 900;
      FieldInfo FieldInfo = 1000;
      FieldInfoFormat FieldInfoFormat = 1100;
      Graphic Graphic = 1200;
      MapFontSerializationRecord MapFontSerializationRecord = 1300;
      MediaInfo MediaInfo = 1400;
      RelatedRecordsInfoFieldOrder RelatedRecordsInfoFieldOrder = 1500;
      SpatialReference SpatialReference = 1600;
      Attribute Attribute = 1700;
      GraphicOrigin GraphicOrigin = 1800;
      MapPath MapPath = 1900;
      MapPoint MapPoint = 2000;
      MeshComponent MeshComponent = 2100;
      MeshComponentMaterial MeshComponentMaterial = 2200;
      MeshTransform MeshTransform = 2300;
      MeshTextureTransform MeshTextureTransform = 2400;
      MeshVertexAttributes MeshVertexAttributes = 2500;
      MeshVertexSpace MeshVertexSpace = 2600;
      MeshTexture MeshTexture = 2700;
      ViewHitSerializationRecord ViewHitSerializationRecord = 2800;
   }
}
message MapComponentCollection {
   oneof subtype {
      GeometryCollection GeometryCollection = 100;
      PopupContentCollection PopupContentCollection = 200;
      PopupExpressionInfoCollection PopupExpressionInfoCollection = 300;
      PopupTemplateCollection PopupTemplateCollection = 400;
      SymbolCollection SymbolCollection = 500;
      ActionCollection ActionCollection = 600;
      ChartMediaInfoValueCollection ChartMediaInfoValueCollection = 700;
      ChartMediaInfoValueSeriesCollection ChartMediaInfoValueSeriesCollection = 800;
      ElementExpressionInfoCollection ElementExpressionInfoCollection = 900;
      FieldInfoCollection FieldInfoCollection = 1000;
      FieldInfoFormatCollection FieldInfoFormatCollection = 1100;
      GraphicCollection GraphicCollection = 1200;
      MapFontCollection MapFontCollection = 1300;
      MediaInfoCollection MediaInfoCollection = 1400;
      RelatedRecordsInfoFieldOrderCollection RelatedRecordsInfoFieldOrderCollection = 1500;
      SpatialReferenceCollection SpatialReferenceCollection = 1600;
      AttributeCollection AttributeCollection = 1700;
      GraphicOriginCollection GraphicOriginCollection = 1800;
      MapPathCollection MapPathCollection = 1900;
      MapPointCollection MapPointCollection = 2000;
      MeshComponentCollection MeshComponentCollection = 2100;
      MeshComponentMaterialCollection MeshComponentMaterialCollection = 2200;
      MeshTransformCollection MeshTransformCollection = 2300;
      MeshTextureTransformCollection MeshTextureTransformCollection = 2400;
      MeshVertexAttributesCollection MeshVertexAttributesCollection = 2500;
      MeshVertexSpaceCollection MeshVertexSpaceCollection = 2600;
      MeshTextureCollection MeshTextureCollection = 2700;
      ViewHitCollectionSerializationRecord ViewHitCollectionSerializationRecord = 2800;
   }
}
message MapFontCollection {
   repeated MapComponent Items = 1;
}
message MapFontSerializationRecord {
   double Size = 1;
   string Family = 2;
   string FontStyle = 3;
   string Weight = 4;
   string Decoration = 5;
   string Id = 6;
}
message MapPath {
   repeated MapComponent Points = 1;
}
message MapPathCollection {
   repeated MapComponent Items = 1;
}
message MapPoint {
   repeated double Coordinates = 1 [packed = false];
}
message MapPointCollection {
   repeated MapComponent Items = 1;
}
message MediaInfo {
   string Type = 1;
   string AltText = 2;
   string Caption = 3;
   string Title = 4;
   MapComponent Value = 5;
   double RefreshInterval = 6;
   string Id = 7;
}
message MediaInfoCollection {
   repeated MapComponent Items = 1;
}
message MeshComponent {
   bytes Faces = 1;
   MapComponent Material = 2;
   string Name = 3;
   string Shading = 4;
}
message MeshComponentCollection {
   repeated MapComponent Items = 1;
}
message MeshComponentMaterial {
   double AlphaCutoff = 1;
   string AlphaMode = 2;
   MapColor Color = 3;
   MapComponent ColorTexture = 4;
   MapComponent ColorTextureTransform = 5;
   bool DoubleSided = 6;
   MapComponent NormalTexture = 7;
   MapComponent NormalTextureTransform = 8;
   MapColor EmissiveColor = 9;
   MapComponent EmissiveTexture = 10;
   MapComponent EmissiveTextureTransform = 11;
   double Metallic = 12;
   MapComponent MetallicRoughnessTexture = 13;
   MapComponent OcclusionTexture = 14;
   MapComponent OcclusionTextureTransform = 15;
   double Roughness = 16;
}
message MeshComponentMaterialCollection {
   repeated MapComponent Items = 1;
}
message MeshTexture {
   ImageData ImageData = 1;
   repeated string Wrap = 2;
   bool Transparent = 3;
   string Url = 4;
}
message MeshTextureCollection {
   repeated MapComponent Items = 1;
}
message MeshTextureTransform {
   repeated double Offset = 1 [packed = false];
   double Rotation = 2;
   repeated double Scale = 3 [packed = false];
}
message MeshTextureTransformCollection {
   repeated MapComponent Items = 1;
}
message MeshTransform {
   double RotationAngle = 1;
   repeated double RotationAxis = 2 [packed = false];
   repeated double Scale = 3 [packed = false];
   repeated double Translation = 4 [packed = false];
}
message MeshTransformCollection {
   repeated MapComponent Items = 1;
}
message MeshVertexAttributes {
   bytes Color = 1;
   repeated double Normal = 2 [packed = false];
   repeated double Position = 3 [packed = false];
   repeated double Tangent = 4 [packed = false];
   repeated double Uv = 5 [packed = false];
}
message MeshVertexAttributesCollection {
   repeated MapComponent Items = 1;
}
message MeshVertexSpace {
   string Type = 1;
   repeated double Origin = 2 [packed = false];
}
message MeshVertexSpaceCollection {
   repeated MapComponent Items = 1;
}
message PopupContent {
   string Type = 1;
   string Description = 2;
   string DisplayType = 3;
   string Title = 4;
   MapComponent ExpressionInfo = 5;
   repeated MapComponent FieldInfos = 6;
   int32 ActiveMediaInfoIndex = 7;
   repeated MapComponent MediaInfos = 8;
   int32 DisplayCount = 9;
   repeated MapComponent OrderByFields = 10;
   int64 RelationshipId = 11;
   string Text = 12;
   string Id = 13;
   repeated string OutFields = 14;
}
message PopupContentCollection {
   repeated MapComponent Items = 1;
}
message PopupExpressionInfoCollection {
   repeated MapComponent Items = 1;
}
message PopupTemplate {
   string Title = 1;
   string StringContent = 2;
   repeated string OutFields = 3;
   repeated MapComponent FieldInfos = 4;
   repeated MapComponent Content = 5;
   repeated MapComponent ExpressionInfos = 6;
   bool OverwriteActions = 7;
   bool ReturnGeometry = 8;
   repeated MapComponent Actions = 9;
   string Id = 10;
}
message PopupTemplateCollection {
   repeated MapComponent Items = 1;
}
message RelatedRecordsInfoFieldOrder {
   string Field = 1;
   string Order = 2;
   string Id = 3;
}
message RelatedRecordsInfoFieldOrderCollection {
   repeated MapComponent Items = 1;
}
message SpatialReference {
   int32 Wkid = 1;
   string Wkt = 2;
}
message SpatialReferenceCollection {
   repeated MapComponent Items = 1;
}
message Symbol {
   string Type = 1;
   MapColor Color = 2;
   MapComponent Outline = 3;
   double Size = 4;
   string Style = 5;
   double Angle = 6;
   double Xoffset = 7;
   double Yoffset = 8;
   double Width = 9;
   string LineStyle = 10;
   string Text = 11;
   MapColor HaloColor = 12;
   double HaloSize = 13;
   MapComponent Font = 14;
   double Height = 15;
   string Url = 16;
   MapColor BackgroundColor = 17;
   double BorderLineSize = 18;
   MapColor BorderLineColor = 19;
   string HorizontalAlignment = 20;
   bool Kerning = 21;
   double LineHeight = 22;
   double LineWidth = 23;
   bool Rotated = 24;
   string VerticalAlignment = 25;
   double XScale = 26;
   double YScale = 27;
   string Id = 28;
   string Name = 29;
   string PortalUrl = 30;
   string StyleName = 31;
   string StyleUrl = 32;
}
message SymbolCollection {
   repeated MapComponent Items = 1;
}
message ViewHitCollectionSerializationRecord {
   repeated MapComponent Items = 1;
}
message ViewHitSerializationRecord {
   string Type = 1;
   MapComponent MapPoint = 2;
   MapComponent Graphic = 3;
   string LayerId = 4;
}
service ProtoService {
   rpc GenerateMapComponentCollection (.google.protobuf.Empty) returns (MapComponentCollection);
   rpc GenerateProtobufClasses (.google.protobuf.Empty) returns (MapComponent);
}
