using Microsoft.CodeAnalysis;
using Microsoft.CodeAnalysis.CSharp.Syntax;
using System.Collections.Immutable;
using System.Text;


namespace dymaptic.GeoBlazor.Core.SourceGenerator.Shared;

/// <summary>
///     Generates serialization data for methods and classes marked with the appropriate attributes.
/// </summary>
public static class SerializationGenerator
{
    public static void GenerateSerializationDataClass(SourceProductionContext context,
        ImmutableArray<BaseTypeDeclarationSyntax> types, 
        Dictionary<string, ProtoMessageDefinition> protoMessageDefinitions, 
        bool isPro, bool isTest)
    {
        try
        {
            ProcessHelper.Log(nameof(SerializationGenerator),
                "Generating serialized data class...",
                DiagnosticSeverity.Info,
                context);
            
            ImmutableArray<SerializableMethodRecord> serializedMethodsCollection = 
            [
                ..types
                    .SelectMany(t => t.ToSerializableMethodRecords())
            ];

            Dictionary<string, ProtoMessageDefinition> protoSerializableTypes = [];

            foreach (BaseTypeDeclarationSyntax type in types)
            {
                string typeName = type.Identifier.Text;
                if (type.AttributeLists.SelectMany(a => a.Attributes)
                    .Any(a => a.Name.ToString() is ProtoSerializableAttribute))
                {
                    if (protoMessageDefinitions.TryGetValue(typeName, out ProtoMessageDefinition? messageDefinition))
                    {
                        protoSerializableTypes[typeName] = messageDefinition;
                    }
                }
                
                // get the parent type
                string? parentTypeName = type.BaseList?
                    .Types
                    .FirstOrDefault(bt => protoMessageDefinitions.ContainsKey(bt.ToString()))?
                    .ToString();

                if (parentTypeName is not null)
                {
                    // check parent type
                    BaseTypeDeclarationSyntax? parentType = types.FirstOrDefault(bt => bt.Identifier.Text == parentTypeName);

                    if (parentType?.AttributeLists.SelectMany(a => a.Attributes)
                        .Any(a => a.Name.ToString() is ProtoSerializableAttribute) == true)
                    {
                        protoSerializableTypes[typeName] = protoMessageDefinitions[parentTypeName];    
                    }
                }
            }

            string className = isPro ? "ProSerializationData" : "CoreSerializationData";

            StringBuilder classBuilder = new($$"""
                                               // <auto-generated/>

                                               #nullable enable
                                               
                                               {{(isPro ? "using dymaptic.GeoBlazor.Core.Serialization;" : "")}}
                                               using System.Collections;
                                               using FieldInfo = dymaptic.GeoBlazor.Core.Components.FieldInfo;

                                               namespace dymaptic.GeoBlazor.{{(isPro ? "Pro" : "Core")}}.Serialization;

                                               /// <summary>
                                               ///     This class is generated by a source generator and contains pre-analyzed serialization information.
                                               /// </summary>
                                               internal static class {{className}}
                                               {
                                                   
                                               """);

            if (!isPro)
            {
                classBuilder.AppendLine(GenerateExtensionMethods(protoSerializableTypes));
            }

            classBuilder.AppendLine(
                GenerateSerializableMethodRecords(serializedMethodsCollection, isPro));

            classBuilder.AppendLine("}");
            
            ProcessHelper.Log(nameof(SerializationGenerator),
                $"Generated serialized data class: {className}.g.cs",
                DiagnosticSeverity.Info,
                context);

            if (isTest)
            {
                ProcessHelper.Log(nameof(SerializationGenerator),
                    $"Skipping generating file for test.",
                    DiagnosticSeverity.Info,
                    context);
            }
            else
            {
                context.AddSource($"{className}.g.cs", classBuilder.ToString());
            }
        }
        catch (Exception ex)
        {
            ProcessHelper.Log(nameof(SerializationGenerator),
                $"Error generating serialized data class: {ex}",
                DiagnosticSeverity.Error,
                context);
        }
    }
    
    private static string GenerateExtensionMethods(Dictionary<string, ProtoMessageDefinition> protoDefinitions)
    {
        StringBuilder readJsProtoStreamRefMethod = new(
                """
                    /// <summary>
                    ///     Convenience method to deserialize an <see cref="IJSStreamReference" /> to a specific type via protobuf.
                    /// </summary>
                    public static async Task<T?> ReadJsStreamReferenceAsProtobuf<T>(this IJSStreamReference jsStreamReference, 
                        Type returnType, long maxAllowedSize = 1_000_000_000)
                    {
                        await using Stream stream = await jsStreamReference.OpenReadStreamAsync(maxAllowedSize);
                        using MemoryStream memoryStream = new();
                        await stream.CopyToAsync(memoryStream);
                        memoryStream.Seek(0, SeekOrigin.Begin);
                        
                        string typeName = returnType.Name.Replace("SerializationRecord", "");
                
                        switch (typeName) 
                        {
                
                """);
        
        StringBuilder readJsProtoCollectionStreamRefMethod = new(
            """
                /// <summary>
                ///     Convenience method to deserialize an <see cref="IJSStreamReference" /> to a specific coolection type via protobuf.
                /// </summary>
                public static async Task<T?> ReadJsStreamReferenceAsProtobufCollection<T>(this IJSStreamReference jsStreamReference, 
                    Type returnType, long maxAllowedSize = 1_000_000_000)
                {
                    await using Stream stream = await jsStreamReference.OpenReadStreamAsync(maxAllowedSize);
                    using MemoryStream memoryStream = new();
                    await stream.CopyToAsync(memoryStream);
                    memoryStream.Seek(0, SeekOrigin.Begin);
                    
                    string typeName = returnType.Name.Replace("SerializationRecord", "");

                    switch (typeName) 
                    {

            """);
            
            StringBuilder protoTypeDictionary = new(
                """
                    /// <summary>
                    ///     A collection of types that can be serialized to Protobuf
                    /// </summary>
                    public static Dictionary<Type, Type> ProtoContractTypes => _protoContractTypes;
                    
                    private static readonly Dictionary<Type, Type> _protoContractTypes = new()
                    {
                
                """);
            
            StringBuilder protoCollectionTypeDictionary = new(
                """
                    /// <summary>
                    ///     A collection of types that can be serialized to Protobuf as collections of a specific Type
                    /// </summary>
                    public static Dictionary<Type, Type> ProtoCollectionTypes => _protoCollectionTypes;
                    
                    private static readonly Dictionary<Type, Type> _protoCollectionTypes = new()
                    {
                
                """);

            StringBuilder protoMemberGenerationMethod = new(
                """
                    /// <summary>
                    ///     Convenience method to generate a Protobuf serialized parameter.
                    /// </summary>
                    public static object ToProtobufParameter(this object value, Type serializableType, bool isServer)
                    {
                        MemoryStream memoryStream = new();
                        switch (serializableType.Name)
                        {
                
                """);

            StringBuilder protoCollectionGenerationMethod = new(
                """
                    /// <summary>
                    ///     Convenience method to generate a Protobuf serialized collection parameter.
                    /// </summary>
                    public static object ToProtobufCollectionParameter(this IList items, Type serializableType, bool isServer)
                    {
                        MemoryStream memoryStream = new();
                        string typeName = $"{serializableType.Name}Collection";
                        switch (serializableType.Name)
                        {
                
                """);

            foreach (KeyValuePair<string, ProtoMessageDefinition> kvp in protoDefinitions.OrderBy(kvp => kvp.Key))
            {
                string protoSerializableType = kvp.Key;
                ProtoMessageDefinition definition = kvp.Value;

                if (definition.Name == "MapComponent")
                {
                    continue;
                }

                string serializationRecordType = definition.Name + "SerializationRecord";
                string serializationCollectionRecordType = definition.Name + "CollectionSerializationRecord";
                
                string variableName = protoSerializableType.ToLowerFirstChar();
                    
                protoTypeDictionary.AppendLine(
                    $$"""
                              { typeof({{protoSerializableType}}), typeof({{serializationRecordType}}) },
                      """);
                
                protoCollectionTypeDictionary.AppendLine(
                    $$"""
                              { typeof({{protoSerializableType}}), typeof({{serializationCollectionRecordType}}) },
                      """);
                
                readJsProtoStreamRefMethod.AppendLine(
                    $$"""
                                  case "{{protoSerializableType}}":
                                      {{serializationRecordType}} {{variableName}} = 
                                          Serializer.Deserialize<{{serializationRecordType}}>(memoryStream);
                                      if ({{variableName}}.IsNull)
                                      {
                                          return default!;
                                      }
                                      return (T?)(object?){{variableName}}?.FromSerializationRecord();
                      """);
                
                readJsProtoCollectionStreamRefMethod.AppendLine(
                    $$"""
                                  case "{{protoSerializableType}}":
                                      {{serializationCollectionRecordType}} {{variableName}} = 
                                          Serializer.Deserialize<{{serializationCollectionRecordType}}>(memoryStream);
                                      if ({{variableName}}.IsNull)
                                      {
                                          return default!;
                                      }
                                      return (T?)(object?){{variableName}}?.Items?.Select(i => i.FromSerializationRecord()).Cast<{{protoSerializableType}}>().ToArray();
                      """);
                
                if (definition.Name == "Attribute")
                {
                    // Attribute is not a GeoBlazor type so skip next injection
                    continue;
                }
                
                protoMemberGenerationMethod.AppendLine(
                    $$"""
                                case "{{protoSerializableType}}":
                                    {{definition.Name}}SerializationRecord {{variableName}} = 
                                        (({{protoSerializableType}})value).ToProtobuf();
                                    Serializer.Serialize(memoryStream, {{variableName}});
                                    
                                    break;
                    """);
                
                protoCollectionGenerationMethod.AppendLine(
                    $$"""
                                  case "{{protoSerializableType}}":
                                      {{definition.Name}}CollectionSerializationRecord {{variableName}} = 
                                          new(items.Cast<{{protoSerializableType}}>().Select(i => i.ToProtobuf()).ToArray());
                                      Serializer.Serialize(memoryStream, {{variableName}});
                                      
                                      break;
                      """);
            }

            protoTypeDictionary.AppendLine("    };");
            protoCollectionTypeDictionary.AppendLine("    };");
            
            readJsProtoStreamRefMethod.AppendLine(
                """
                        }
                        
                        return default!;
                    }
                """);
            
            readJsProtoCollectionStreamRefMethod.AppendLine(
                """
                        }
                        
                        return default!;
                    }
                """);

            protoMemberGenerationMethod.AppendLine(
                """
                        }
                        
                        memoryStream.Seek(0, SeekOrigin.Begin);
                
                        if (isServer)
                        {
                            return new DotNetStreamReference(memoryStream);
                        }
                        
                        byte[] data = memoryStream.ToArray();
                        memoryStream.Dispose();
                        
                        return data;
                    }
                """);
            
            protoCollectionGenerationMethod.AppendLine(
                """
                        }
                        
                        memoryStream.Seek(0, SeekOrigin.Begin);
                
                        if (isServer)
                        {
                            return new DotNetStreamReference(memoryStream);
                        }
                        
                        byte[] data = memoryStream.ToArray();
                        memoryStream.Dispose();
                        
                        return data;
                    }
                """);

            return $"""
                    {readJsProtoStreamRefMethod}
                    
                    {readJsProtoCollectionStreamRefMethod}
                    
                    {protoMemberGenerationMethod}
                    
                    {protoCollectionGenerationMethod}
                    
                    {protoTypeDictionary}
                    
                    {protoCollectionTypeDictionary}
                    """;
    }
    
    private static string GenerateSerializableMethodRecords(
        ImmutableArray<SerializableMethodRecord> serializedMethodsCollection, bool isPro)
    {
        StringBuilder outputBuilder;

        if (isPro)
        {
            outputBuilder = new(
                """
                    /// <summary>
                    ///     A collection of serializable methods and their parameters/return types.
                    /// </summary>
                    public static Dictionary<string, SerializableMethodRecord[]> SerializableMethods => _serializableMethods
                        .Concat(CoreSerializationData.SerializableMethods)
                        .ToDictionary(kvp => kvp.Key, kvp => kvp.Value);
                
                    private static readonly Dictionary<string, SerializableMethodRecord[]> _serializableMethods = new()
                    {

                """);
        }
        else
        {
            outputBuilder = new(
                """
                    /// <summary>
                    ///     A collection of serializable methods and their parameters/return types.
                    /// </summary>
                    public static Dictionary<string, SerializableMethodRecord[]> SerializableMethods => _serializableMethods;

                    private static readonly Dictionary<string, SerializableMethodRecord[]> _serializableMethods = new()
                    {

                """);
        }

        foreach (var classGroup in serializedMethodsCollection.GroupBy(m => m.ClassName))
        {
            outputBuilder.AppendLine($$"""
                                               ["{{classGroup.Key}}"] = 
                                                   [
                                       """);

            foreach (var methodRecord in classGroup)
            {
                if (methodRecord.Parameters.Values.Contains("T")
                   || methodRecord.Parameters.Values.Contains("T?")
                   || methodRecord.ReturnType == "T"
                   || methodRecord.ReturnType == "T?"
                   || methodRecord.ReturnType == "T[]"
                   || methodRecord.ReturnType == "T[]?"
                   || methodRecord.ReturnType?.Contains("<T>") == true)
                {
                    continue;
                }
                outputBuilder.AppendLine($$"""
                                                           new SerializableMethodRecord("{{methodRecord.MethodName.ToLowerFirstChar()}}",
                                                               [
                                           """);

                foreach (var param in methodRecord.Parameters)
                {
                    bool isNullable = param.Value.EndsWith("?");
                    string value = isNullable ? param.Value.TrimEnd('?') : param.Value;
                    string isNullableText = isNullable ? "true" : "false";
                    string? collectionType = null;

                    if (value.EndsWith("[]"))
                    {
                        collectionType = value.Replace("[]", "");
                    }
                    else if (value.Contains("<") && value.Contains(">"))
                    {
                        int genericStart = value.IndexOf("<", StringComparison.OrdinalIgnoreCase);
                        collectionType = value.Substring(genericStart + 1, value.Length - genericStart - 2);
                    }
                    
                    string collectionText = collectionType is null
                        ? "null"
                        : $"typeof({collectionType})";
                    outputBuilder.AppendLine($"                        new SerializableParameterRecord(typeof({value}), {isNullableText}, {collectionText}),");
                }

                if (methodRecord.ReturnType != null)
                {
                    string returnValue = methodRecord.ReturnType.TrimEnd('?');

                    bool isCollectionReturn = returnValue.EndsWith("[]") ||
                                              (returnValue.Contains("<") && returnValue.Contains(">"));
                    
                    string singleType = isCollectionReturn
                        ? returnValue.Contains("<") && returnValue.Contains(">")
                            ? $"typeof({returnValue.Substring(
                                returnValue.IndexOf("<", StringComparison.OrdinalIgnoreCase) + 1,
                                returnValue.Length - returnValue.IndexOf("<", StringComparison.OrdinalIgnoreCase) - 2)
                            })"
                            : $"typeof({returnValue.Replace("[]", "")})"
                        : "null";
                    string isNullable = methodRecord.ReturnType.EndsWith("?") ? "true" : "false";
                    outputBuilder.AppendLine($"                    ], new SerializableParameterRecord(typeof({returnValue}), {isNullable}, {singleType})),");
                } 
                else
                {
                    outputBuilder.AppendLine("                ])),");
                }
            }

            outputBuilder.AppendLine("       ],");
        }

        outputBuilder.AppendLine("    };");

        return outputBuilder.ToString();
    }

    private static List<SerializableMethodRecord> ToSerializableMethodRecords(this BaseTypeDeclarationSyntax typeSyntax)
    {
        List<MethodDeclarationSyntax> methods = typeSyntax
            .ChildNodes()
            .OfType<MethodDeclarationSyntax>()
            .Where(m => m.AttributeLists
                .SelectMany(a => a.Attributes)
                .Any(attr => attr.Name.ToString() == SerializedMethodAttributeName))
            .ToList();
        
        List<SerializableMethodRecord> methodRecords = [];
        
        foreach (MethodDeclarationSyntax method in methods)
        {
            string returnType = method.ReturnType.ToString();
    
            if (returnType.StartsWith("Task") || returnType.StartsWith("ValueTask"))
            {
                int bracketIndex = returnType.IndexOf('<');
                returnType = returnType.Substring(bracketIndex + 1, returnType.Length - bracketIndex - 2);
            }
            SerializableMethodRecord record = new(typeSyntax.Identifier.Text, 
                method.Identifier.Text,
                method.ParameterList.Parameters.ToDictionary(
                    p => p.Identifier.Text,
                    p => p.Type!.ToString()),
                returnType);
    
            methodRecords.Add(record);
        }
        
        return methodRecords;
    }

    private const string SerializedMethodAttributeName = "SerializedMethod";
    private const string ProtoSerializableAttribute = "ProtobufSerializable";
}

public record SerializableMethodRecord(string ClassName, string MethodName, Dictionary<string, string> Parameters,
    string ReturnType)
{
    public string ClassName { get; } = ClassName;
    public string MethodName { get; } = MethodName;
    public Dictionary<string, string> Parameters { get; } = Parameters;
    public string? ReturnType { get; } = ReturnType;
}